
    * graphics/spypylab.py:
      (ImageViewKeyboardHandler.handle_event): Check ImageView.classes instead
        of ImageView.class_axes.
      (ImageView.init_callbacks): Make class update callback handle `classes`
        being None.
      (ImageView.set_display_mode): Call .show_classes if classes are set but
        .class_axes is not (i.e., if classes were set since last update).

2013-12-27	tboggs <tboggs@users.sourceforge.net>

    Avoid a bug in `wx.NewId` that can cause exceptions when right-clicking in
    an ND window.

    * graphics/ndwindow.py (MouseMenu.__init__): Cache menu item ID's instead of
     regenerating them every time the menu is opened. This avoids an exception
     that intermittantly occurs in wx.

    * graphics/spypylab.py:
      (ImageViewMouseHandler.handle_event): Force redraw of spectrum plots.

    Fixed bug that caused an exception when a SpyFile object is used in an
    ImageView.

    * graphics/spypylab.py (ImageView.set_data): Use `shape` member instead of
      `ndim`.

2013-12-23	tboggs <tboggs@users.sourceforge.net>

    Make selection rectangle disappear when canceling selection and stay when
    selection is complete.

    * graphics/spypylab:
      (ImageViewKeyboardHandler.on_key_release): Suppress cancellation message
       if mouse was never clicked. Hide rectangle if SHIFT is released while
       selecting.
      (ImageViewKeyboardHandler.handle_event): Make selection rectangle
       disappear after pixels are assigned to a class.
      (ImageView._select_rectangle): Make selection rectangle continue to be
       displayed until the next GUI event (the default mpl behavior is for it
       to disappear).

2013-12-11	tboggs <tboggs@users.sourceforge.net>

    Completed initial implementation of pixel class labeling.

    * graphics/spypylab.py:
      (MplCallbacks.show_events): New boolean class attribute that indicates
       whether matplotlib events should be printed to the console.