@@ -32,7 +32,7 @@
 from algorithms import (mean_cov, covariance, principal_components, bdist,
                         linear_discriminant, create_training_classes, ndvi,
                         orthogonalize, transform_image, unmix, spectral_angles,
-                        calc_stats, cov_avg)
+                        calc_stats, cov_avg, msam)
 from classifiers import GaussianClassifier, MahalanobisDistanceClassifier
 from clustering import L1, L2, kmeans, cluster, isoCluster
 from perceptron import PerceptronClassifier
